XO_Project_UAT/Project--XOGrp--UAT/src/objects/Local_Sales_Rep_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Local Sales Rep Assignments</relationshipLabel>
        <relationshipName>Local_Sales_Rep_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Distribution_Queue_Id__c</fullName>
        <description>The Queue Id which is related to the Distribution Queue Name which was added.</description>
        <label>Lead Distribution Queue Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Distribution_Queue_Name__c</fullName>
        <description>This field is used to provide the name of the Lead queue which should be used to assign as the owner. The field &quot;Queue Name&quot; should be used - it generally has underscores for spaces and is sometimes called the &quot;Developer Name&quot;.</description>
        <inlineHelpText>The filed on queue named &quot;Queue Name&quot; should be used to populate this field.</inlineHelpText>
        <label>Lead Distribution Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Local Sales Rep Assignments</relationshipLabel>
        <relationshipName>Local_Sales_Rep_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Local_Sales_Rep_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Zip Code</label>
        <referenceTo>Zip__c</referenceTo>
        <relationshipLabel>Local Sales Rep Assignments</relationshipLabel>
        <relationshipName>Local_Sales_Rep_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Local Sales Rep Assignment</label>
    <listViews>
        <fullName>All20190111</fullName>
        <columns>NAME</columns>
        <columns>CaseSafeID__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LOA_Cecelia_Groark_Local_Sales_Rep_Assignment</fullName>
        <filterScope>Queue</filterScope>
        <label>LOA - Cecelia Groark</label>
        <queue>LOA_Cecelia_Groark</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LOA_Jackie_Ornellas_Local_Sales_Rep_Assignment</fullName>
        <filterScope>Queue</filterScope>
        <label>LOA - Jackie Ornellas</label>
        <queue>LOA_Jackie_Ornellas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LOA_Sarah_Rucinski_Local_Sales_Rep_Assignment</fullName>
        <filterScope>Queue</filterScope>
        <label>LOA - Sarah Rucinski</label>
        <queue>LOA_Sarah_Rucinski</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LOA_Stacy_Brambila_Local_Sales_Rep_Assignment</fullName>
        <filterScope>Queue</filterScope>
        <label>LOA - Stacy Brambilia</label>
        <queue>LOA_Stacy_Brambilia</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LOA_Stacy_Brambila_Local_Sales_Rep_Assignment1</fullName>
        <filterScope>Queue</filterScope>
        <label>LOA - Stacy Brambila</label>
        <queue>LOA_Stacy_Brambila</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Local Sales Rep Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Local Sales Rep Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Disallow_Rep_AND_Queue</fullName>
        <active>true</active>
        <description>This rule is used to reject records which have both a Rep AND Queue on the same rule,</description>
        <errorConditionFormula>NOT(ISBLANK(Sales_Rep__c)) &amp;&amp; NOT(ISBLANK(Lead_Distribution_Queue_Id__c))</errorConditionFormula>
        <errorMessage>Assignments rules cannot have both a Sales Rep and a Queue assigned at the same time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_and_Market_Validation</fullName>
        <active>true</active>
        <description>Do not allow a value in both Zip and Market fields</description>
        <errorConditionFormula>NOT(ISBLANK( Market__c )) &amp;&amp; NOT(ISBLANK(Zip_Code__c))</errorConditionFormula>
        <errorDisplayField>Market__c</errorDisplayField>
        <errorMessage>You can not select both Local Market and Zip Code!</errorMessage>
    </validationRules>
</CustomObject>